# iva

./: .taurignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  documentation_request.md  feat-request.md  feat_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: breaking-change.md  maintenance.md
src/: App.vue  filter-meta.ts  item-meta.ts  main.ts  types.ts
src-core/: Cargo.toml
src-core/src/: lib.rs  types.rs
src-core/src/parse/: mod.rs
src-core/src/parse/filters/: gaussian_blur.rs  mod.rs
src-core/src/parse/items/: circle.rs  mod.rs  rect.rs  text.rs
src-core/src/render/: mod.rs
src-core/src/render/filters/: gaussian_blur.rs  mod.rs
src-core/src/render/items/: circle.rs  mod.rs  rect.rs  text.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: mod.rs  render.rs  update_layers.rs  update_time.rs
src-tauri/src/menu/: export_gif.rs  export_mp4.rs  export_png.rs  mod.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  types.rs
src/assets/css/: global.css
src/assets/fonts/: LICENSE.md
src/components/: NumberField.vue  Panel.vue  Prop.vue  Select.vue  Slider.vue  TextField.vue
src/components/inputs/: TextField.vue
src/panes/: CurveEditor.vue  FileManager.vue  Props.vue  Screen.vue  Timeline.vue
src/scripts/: duration.ts  option-util.ts  timerange-utils.ts
src/stores/: cursor.ts  items.ts  render.ts  time.ts
