[package]
authors = ["1Step621 <onestep621@gmail.com>"]
description = "The tauri part of the Iva editor"
edition = "2024"
name = "iva"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "iva_lib"

[build-dependencies]
tauri-build = {version = "2.0.6", features = []}

[dependencies]
src-core = {path = "../src-core"}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tauri = {version = "2.3.1", features = []}
tauri-plugin-opener = "2.2.6"
